added nav tag and started stylizing it

--- a/cennik.html
+++ b/cennik.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="author" content="Jan Hryb">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Myjnia</title>
 </head>
 <body>
-    
+    <div class="container">
+        <nav>
+            <header>
+                <h2>MYJNIA RĘCZNA</h2>
+                <h1>BŁYSK</h1>
+            </header>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cennik.html">Cennik</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
