stylizing menu and header

--- a/cennik.html
+++ b/cennik.html
@@ -11,8 +11,8 @@
     <div class="container">
         <nav>
             <header>
-                <h2>MYJNIA RĘCZNA</h2>
-                <h1>BŁYSK</h1>
+                <h1>Myjnia ręczna</h1>
+                <p class="blysk">błysk</p>
             </header>
             <ul>
                 <li><a href="index.html">Home</a></li>
