ended doing nav

--- a/cennik.html
+++ b/cennik.html
@@ -12,7 +12,7 @@
         <nav>
             <header>
                 <h1>Myjnia ręczna</h1>
-                <p class="blysk">błysk</p>
+                <h2 class="blysk">błysk</h2>
             </header>
             <ul>
                 <li><a href="index.html">Home</a></li>
