starterd making main tag

--- a/cennik.html
+++ b/cennik.html
@@ -19,6 +19,10 @@
                 <li><a href="cennik.html">Cennik</a></li>
             </ul>
         </nav>
+        <main>
+            <h2>Oblisz kosz usługi</h2>
+            <form action="get"></form>
+        </main>
     </div>
 </body>
 </html>
