--- a/cennik.html
+++ b/cennik.html
@@ -21,7 +21,25 @@
         </nav>
         <main>
             <h2>Oblisz kosz usługi</h2>
-            <form action="get"></form>
+            <form action="get">
+                <label for="text">Podaj imię: <input type="text" name="text" id="text" value="wpisz swoje imie"></label>
+                <fieldset>
+                    <legend>usługa</legend>
+                    <p>mycie zewnętrzne 30zł</p>
+                    <label for="suszenie">suszenie<input type="checkbox" name="suszenie" value="suszenie" id="suszenie"></label>
+                    <label for="woskowanie">woskowanie <input type="checkbox" name="woskowanie" value="woskowanie" id="woskowanie"></label>
+                    <label for="odkurzanie">odkurzanie <input type="checkbox" name="odkurzanie" value="odkurzanie" id="odkurzanie"></label>
+                </fieldset>
+                <fieldset>
+                    <legend>rodzaj pojazdu</legend>
+                    <select name="rodzaj" id="rodzaj">
+                        <option value="maly">maly</option>
+                        <option value="sredni">sredni (+10%)</option>
+                        <option value="van">van (+20%)</option>
+                        <option value="bus">bus (+45%)</option>
+                    </select>
+                </fieldset>
+            </form>
         </main>
     </div>
 </body>
