ended doing css

--- a/cennik.html
+++ b/cennik.html
@@ -27,33 +27,32 @@
                 <label for="text">Podaj imię: <input type="text" name="text" id="text"
                         placeholder="wpisz swoje imie"></label>
                 <fieldset>
-                    <legend>usługa</legend>
-                    <p>mycie zewnętrzne 30zł</p>
-                    <label for="suszenie">suszenie<input type="checkbox" name="suszenie" value="suszenie"
+                    <legend>Usługa</legend>
+                    <p>Mycie zewnętrzne 30zł</p>
+                    <label for="suszenie">Suszenie<input type="checkbox" name="suszenie" value="suszenie"
                             id="suszenie"></label>
-                    <label for="woskowanie">woskowanie <input type="checkbox" name="woskowanie" value="woskowanie"
+                    <label for="woskowanie">Woskowanie <input type="checkbox" name="woskowanie" value="woskowanie"
                             id="woskowanie"></label>
-                    <label for="odkurzanie">odkurzanie <input type="checkbox" name="odkurzanie" value="odkurzanie"
+                    <label for="odkurzanie">Odkurzanie <input type="checkbox" name="odkurzanie" value="odkurzanie"
                             id="odkurzanie"></label>
                 </fieldset>
                 <fieldset>
-                    <legend>rodzaj pojazdu</legend>
+                    <legend>Rodzaj pojazdu</legend>
                     <select name="rodzaj" id="rodzaj">
-                        <option value="maly">maly</option>
-                        <option value="sredni">sredni (+10%)</option>
-                        <option value="van">van (+20%)</option>
-                        <option value="bus">bus (+45%)</option>
+                        <option value="maly">Maly</option>
+                        <option value="sredni">Sredni (+10%)</option>
+                        <option value="van">Van (+20%)</option>
+                        <option value="bus">Bus (+45%)</option>
                     </select>
                 </fieldset>
                 <fieldset>
-                    <legend>karta stałego klienta</legend>
-                    <label for="brak">brak<input type="radio" name="brak" value="brak" id="brak" checked></label>
-                    <label for="srebrna">srebrna(-5%) <input type="radio" name="srebrna" value="srebrna"
-                            id="srebrna"></label>
-                    <label for="zlota">zlota(-15%) <input type="radio" name="zlota" value="zlota" id="zlota"></label>
+                    <legend>Karta stałego klienta</legend>
+                    <label for="brak">Brak<input type="radio" name="brak" value="brak" id="brak" checked></label>
+                    <label for="srebrna">Srebrna (-5%) <input type="radio" name="srebrna" value="srebrna" id="srebrna"></label>
+                    <label for="zlota">Zlota (-15%) <input type="radio" name="zlota" value="zlota" id="zlota"></label>
                 </fieldset>
-                <input type="submit" value="oblicz">
-                <input type="reset" value="wyczyść">
+                <input type="submit" value="Oblicz" class="button">
+                <input type="reset" value="Wyczyść" class="button">
             </form>
             <div class="obrazek">
                 <img src="img/hand_m.jpg" alt="hand_m">
@@ -66,7 +65,7 @@
                 Zarezerwuj mycie pojazdu na konkretną godzinę </article>
         </aside>
         <footer>
-            <h2>Imię i Nazwisko</h2>
+            <p class="imie_nazwisko_f">Imię i Nazwisko</p>
             <p>klasa 2P</p>
         </footer>
     </div>
